Enable production onboarding DMs
